--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learncrudnodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "id.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/MaylsonMoraes/learncrudnodejs#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongodb": "^4.4.0",
+    "mongoose": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
